--- a/src/components/ModalCart/ModalCart.module.css
+++ b/src/components/ModalCart/ModalCart.module.css
@@ -16,6 +16,8 @@
   border-radius: 8px;
   width: 80%;
   max-width: 600px;
+  max-height: 90vh;
+  overflow-y: auto;
   position: relative;
 }
 
